starrs/bazarr/resources/bazarr-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  serviceName: bazarr
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: config
      labels:
        name: bazarr
        app: bazarr
        part-of: starrs
    spec:
      containers:
        - name: bazarr
          image: bazarr-image ***REMOVED*** lscr.io/linuxserver/bazarr - controlled by Kustomize
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 512Mi
          ports:
            - containerPort: 6767
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: nfs-storage-movies
              mountPath: /sxtnpool/files/media/HD_Movies
            - name: nfs-storage-series
              mountPath: /sxtnpool/files/media/Series
      volumes:
        - name: nfs-storage-movies
          nfs:
            path: /sxtnpool/files/media/HD_Movies
            server: 10.0.250.200
            readOnly: false
        - name: nfs-storage-series
          nfs:
            path: /sxtnpool/files/media/Series
            server: 10.0.250.200
            readOnly: false
      securityContext:
        runAsUser: 210102
        runAsGroup: 210101
        fsGroup: 210101
        fsGroupChangePolicy: OnRootMismatch
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "storage-fast"
        resources:
          requests:
            storage: 2Gi
