starrs/bazarr/resources/bazarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: starrs
  labels:
    app: bazarr
  name: bazarr
spec:
  ports:
    - name: "bazarr-6767"
      port: 6767
      protocol: TCP
      targetPort: 6767
  selector:
    app: bazarr
